...
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/imageButton"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_arrotondato"
        android:backgroundTint="@color/cardview_light_background"
        android:ems="10"
        android:textAllCaps="false"
...
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_desc"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/Didascalia"
        android:layout_width="199dp"
        android:layout_height="114dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Aggiungi una didascalia..."
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NomeText"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/text_arrotondato"

        android:backgroundTint="@color/cardview_light_background"
...
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/b_desc"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Didascalia"
        app:srcCompat="@drawable/ic_baseline_insert_photo_24" />

    <ImageButton
        android:id="@+id/take"
        style="?android:textAppearanceSmall"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
...
    <TextView
        android:id="@+id/nome"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:text="Nome"
        android:textColor="#B2000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apri" />

    <TextView
        android:id="@+id/breve_desc"
        android:layout_width="231dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:text="Breve descrizione"
        android:textColor="#B2000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeText" />

...
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

...
